--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Vote-firebase</string>
+    <string name="app_name">ChaguoMoja</string>
     <string name="password">Password</string>
     <string name="id">ID</string>
     <string name="surname">Surname</string>
